2023-11-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-code-show2): rewritten.

	* eev-elinks.el (ee-find-grep-links1): added an `ee-find-grep'.

	* eev-blinks.el (find-node): use `ee-goto-rest' instead of
	`ee-goto-position' (for `find-maximanode').

2023-07-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-brxxx.el (ee-dired-to-fname): added a `file-name-unquote'.

2023-07-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-mbe-links, ee-grim): new functions.
	(find-wgetrecursive-links): new function.

	* eev-plinks.el (find-callprocessregion): the argument "input" was
	missing; fixed.
	(ee-callprocessregion): new function.

2023-05-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (code-etv2, find-code-etv2, ee-code-etv2):
	deleted.
	(code-show2, find-code-show2, ee-code-show2): new functions.

2023-05-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-melpa-links): New function.

	* eev-elinks.el (ee-find-epackage-links0): use `find-melpa-links'.

2023-04-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (code-etv2, find-code-etv2, ee-code-etv2): new
	functions.

	* eev-videolinks.el (ee-1stclassvideos-pagestem): new function.

2023-04-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-find-eww-preprocess-url): new function.
	(find-eww): use `ee-find-eww-preprocess-url'.

2023-02-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tla.el (ee-code-tla): small changes.

2023-01-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-emajormode-links): fixed a bug.

	* eev-kla.el (ee-kl-sexp-kla0, eekla0): new functions.

	* eev-tlinks.el (find-emacsclient-links): new function.

2023-01-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el: changed angg.twu.net to anggtwu.net.

	* eev-blinks.el: changed angg.twu.net to anggtwu.net.

	* eev-elinks.el: changed angg.twu.net to anggtwu.net.

	* eev-hlinks.el: changed angg.twu.net to anggtwu.net.
